# Cache-Simulator

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
.cache/clangd/index/: AnimationManager.cpp.3593F2D5A065B87C.idx  AnimationManager.hpp.391C9D04F895E92D.idx  AssetManager.cpp.4C3EC8F7461DA4BA.idx  AssetManager.hpp.D9476371BE26860E.idx  Backend.hpp.D9EEC6DA279C228C.idx  CacheAccess.hpp.6AABDE95C6384B9D.idx  CacheReport.cpp.77EC1E576EB4C171.idx  CacheReport.hpp.9D81E5922A0783D6.idx  CacheSpecs.hpp.65FCAE471FBF634A.idx  Color.cpp.FA8BF2E980974D00.idx  Color.hpp.1E09AD9A0182F999.idx  Component.hpp.92809B96EB1939EB.idx  Debug.hpp.6EFB3BA0E1195818.idx  Engine.cpp.1D0600617F6A12EC.idx  Engine.hpp.CE745BA1601673EC.idx  Font.cpp.53BAC48FA54547CB.idx  Font.hpp.90413F80A7B52002.idx  Frontend.hpp.24DF944ECE310745.idx  Mesh.cpp.85BC52C57742DCC6.idx  Mesh.hpp.E78E2C5235D0F6BB.idx  Object.cpp.1E80461B593E18D6.idx  Object.hpp.A041C7E29924B93F.idx  Shader.cpp.D85D01FDACF103F8.idx  Shader.hpp.F04979D6EA0A29FB.idx  Simulator.cpp.D108DD9F6EAD2995.idx  Simulator.hpp.96380C6F9BB6847D.idx  TQueue.hpp.6BA3932F2E8A1C21.idx  Temp.hpp.ADC7C226EC73A415.idx  Texture.cpp.93BE5B2539298AD0.idx  Texture.hpp.35DCF7F52025D319.idx  Transform.cpp.256595E3AFEFF956.idx  Transform.hpp.95A5C2835385F2E4.idx  Types.hpp.0C53B8C1897B8C79.idx  Variable.hpp.8027281F60076974.idx  Variables.cpp.69FBCB06CC5FB1F4.idx  _fixes.hpp.8F100A899C9B87A5.idx  _vectorize.hpp.5205842E4F5E2413.idx  app.cpp.32CC5F289912FD25.idx  app.hpp.6C68652CCA3302B3.idx  common.hpp.B41951011269CDDD.idx  (+230 more)
.nvim/: launch.lua
assets/fonts/: CMakeLists.txt
assets/meshes/: -.csv  0.csv  1.csv  2.csv  3.csv  4.csv  5.csv  6.csv  7.csv  8.csv  9.csv  :.csv  >.csv  A.csv  B.csv  C.csv  D.csv  E.csv  F.csv  G.csv  H.csv  I.csv  J.csv  K.csv  L.csv  M.csv  N.csv  O.csv  P.csv  Q.csv  R.csv  S.csv  T.csv  U.csv  V.csv  W.csv  X.csv  Y.csv  Z.csv  a.csv  (+26 more)
assets/shaders/: 2d.frag  2d.vert  2d_camera.frag  2d_camera.vert  border.frag  border.vert  border_camera.vert  cutting.frag  cutting.vert  debug.vert  path.frag  path.vert  texture_camera.frag  texture_camera.vert
include/: app.hpp
include/Backend/: Backend.hpp  Cache.hpp  FIFO.hpp  LRU.hpp  RANDOM.hpp  SubstitutionPolitics.hpp  Temp.hpp
include/Frontend/: Frontend.hpp  HeadLess.hpp
include/Frontend/Simulator/: Simulator.hpp
include/Frontend/Simulator/Engine/: AnimationManager.hpp  AssetManager.hpp  Debug.hpp  Engine.hpp  Font.hpp  Object.hpp
include/Frontend/Simulator/Engine/Components/: Color.hpp  Component.hpp  Mesh.hpp  Shader.hpp  Texture.hpp  Transform.hpp  Variable.hpp
include/common/: CacheAccess.hpp  CacheReport.hpp  CacheSpecs.hpp  TQueue.hpp  Types.hpp
src/: CMakeLists.txt  app.cpp  main.cpp
src/Backend/: Cache.cpp  FIFO.cpp  LRU.cpp  RANDOM.cpp
src/Frontend/: HeadLess.cpp
src/Frontend/Simulator/: Simulator.cpp
src/Frontend/Simulator/Engine/: AnimationManager.cpp  AssetManager.cpp  Engine.cpp  Font.cpp  Object.cpp
src/Frontend/Simulator/Engine/Components/: Color.cpp  Mesh.cpp  Shader.cpp  Texture.cpp  Transform.cpp  Variables.cpp
src/common/: CacheReport.cpp
